fix(ui): Handle text overflow in CommonEntitySummaryInfo and fix loader in search bar (#22330)
* fixed overflow & search issue

* fixed popover content

* removed unncessary code

--- a/openmetadata-ui/src/main/resources/ui/src/styles/modal.less
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/modal.less
@@ -43,3 +43,6 @@
   max-height: calc(100vh - 120px);
   overflow-y: scroll;
 }
+.ant-popover-inner-content {
+  width: 100%;
+}
